# ta-bible-2

./: .gitignore  CMakeLists.txt  README.md  bible.cpp  bible.hpp  index.html  main.cpp  quote_worker.js  ta-bible-2.js  ta-bible-2.wasm  trie.hpp
include/: bible.hpp  trie.hpp
src/: CMakeLists.txt  bible.cpp  main.cpp  trie.cpp
static/: CMakeLists.txt  index.html  quote_worker.js
